feat -added authentication

--- a/app/globals.css
+++ b/app/globals.css
@@ -74,4 +74,11 @@
       @apply bg-background text-foreground;
       min-height: 100vh;
     }
+
+    .linear-bg{
+      background-image: url("https://images.unsplash.com/photo-1665080954352-5a12ef53017a?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+      background-size: cover;
+      background-repeat: repeat;
+      background-position: center;
+    }
   }
